Projeto/base.core/src/main/java/eapli/base/exammanagement/lprog/ExamParser.java
// Generated from C:/Users/Gabriel/Desktop/Escola/Engenharia Informática/2º Ano/2º Semetre/Projeto Integrador/sem4pi-22-23-20/antlr4\Exam.g4 by ANTLR 4.12.0

package eapli.base.exammanagement.lprog;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExamParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE_OR_FALSE=1, NONE=2, ON_SUBMISSION=3, CHOSING_OPTION_SELECT_MISSING_WORDS=4, 
		AFTER_CLOSING=5, IDENTIFIER=6, TITLE=7, OPENING_DATE_TIME=8, CLOSING_DATE_TIME=9, 
		HEADER=10, TYPE_OF_FEEDBACK=11, TYPE_OF_GRADE=12, DESCRIPTION=13, SECTION=14, 
		MATCHING=15, MULTIPLE_CHOICE=16, SHORT_ANSWER=17, NUMERICAL=18, SELECT_MISSING_WORDS=19, 
		TRUE_FALSE=20, SCORE_PER_LINE=21, SCORE=22, CORRECT_ANSWER=23, FEEDBACK=24, 
		ERROR_NUMERICAL=25, POSSIBLE_CHOICES_SELECT_MISSING_WORDS=26, DATE=27, 
		TIME=28, NUMS=29, CHAR=30, NUM=31, NEWLINE=32, SPECIAL_CHAR=33, PUNCTUATION_MARKS=34, 
		DOT=35, DASH=36, SLASH=37, SPACE=38, COMMA=39, TWO_DOTS=40, UNDERSCORE=41, 
		RIGHT_PARENTHESES=42, DIVISIVE=43, FLOAT=44, NUMERICAL_OPTION=45, ALPHABETICAL_OPTION=46, 
		MATCHING_OPTION_CORRECTION=47, WORD=48, WS=49;
	public static final int
		RULE_exam = 0, RULE_title = 1, RULE_header = 2, RULE_section = 3, RULE_question = 4, 
		RULE_matching = 5, RULE_pair = 6, RULE_matchingOptionCorrection = 7, RULE_multipleChoice = 8, 
		RULE_shortAnswer = 9, RULE_numerical = 10, RULE_selectMissingWords = 11, 
		RULE_uncompleteText = 12, RULE_possibleChoices = 13, RULE_trueFalse = 14, 
		RULE_phrase = 15, RULE_option = 16, RULE_feedback = 17, RULE_type = 18, 
		RULE_words = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"exam", "title", "header", "section", "question", "matching", "pair", 
			"matchingOptionCorrection", "multipleChoice", "shortAnswer", "numerical", 
			"selectMissingWords", "uncompleteText", "possibleChoices", "trueFalse", 
			"phrase", "option", "feedback", "type", "words"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'none'", "'on-submission'", "'<option>'", "'after-closing'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'.'", "'-'", "'/'", "' '", "','", "':'", 
			"'_'", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE_OR_FALSE", "NONE", "ON_SUBMISSION", "CHOSING_OPTION_SELECT_MISSING_WORDS", 
			"AFTER_CLOSING", "IDENTIFIER", "TITLE", "OPENING_DATE_TIME", "CLOSING_DATE_TIME", 
			"HEADER", "TYPE_OF_FEEDBACK", "TYPE_OF_GRADE", "DESCRIPTION", "SECTION", 
			"MATCHING", "MULTIPLE_CHOICE", "SHORT_ANSWER", "NUMERICAL", "SELECT_MISSING_WORDS", 
			"TRUE_FALSE", "SCORE_PER_LINE", "SCORE", "CORRECT_ANSWER", "FEEDBACK", 
			"ERROR_NUMERICAL", "POSSIBLE_CHOICES_SELECT_MISSING_WORDS", "DATE", "TIME", 
			"NUMS", "CHAR", "NUM", "NEWLINE", "SPECIAL_CHAR", "PUNCTUATION_MARKS", 
			"DOT", "DASH", "SLASH", "SPACE", "COMMA", "TWO_DOTS", "UNDERSCORE", "RIGHT_PARENTHESES", 
			"DIVISIVE", "FLOAT", "NUMERICAL_OPTION", "ALPHABETICAL_OPTION", "MATCHING_OPTION_CORRECTION", 
			"WORD", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Exam.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExamParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExamContext extends ParserRuleContext {
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<SectionContext> section() {
			return getRuleContexts(SectionContext.class);
		}
		public SectionContext section(int i) {
			return getRuleContext(SectionContext.class,i);
		}
		public ExamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterExam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitExam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitExam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExamContext exam() throws RecognitionException {
		ExamContext _localctx = new ExamContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_exam);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			title();
			setState(41);
			header();
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				section();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SECTION );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TitleContext extends ParserRuleContext {
		public TerminalNode TITLE() { return getToken(ExamParser.TITLE, 0); }
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public TerminalNode OPENING_DATE_TIME() { return getToken(ExamParser.OPENING_DATE_TIME, 0); }
		public List<TerminalNode> DATE() { return getTokens(ExamParser.DATE); }
		public TerminalNode DATE(int i) {
			return getToken(ExamParser.DATE, i);
		}
		public List<TerminalNode> SPACE() { return getTokens(ExamParser.SPACE); }
		public TerminalNode SPACE(int i) {
			return getToken(ExamParser.SPACE, i);
		}
		public List<TerminalNode> TIME() { return getTokens(ExamParser.TIME); }
		public TerminalNode TIME(int i) {
			return getToken(ExamParser.TIME, i);
		}
		public TerminalNode CLOSING_DATE_TIME() { return getToken(ExamParser.CLOSING_DATE_TIME, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(TITLE);
			setState(48);
			phrase();
			setState(49);
			match(NEWLINE);
			setState(50);
			match(OPENING_DATE_TIME);
			setState(51);
			match(DATE);
			setState(52);
			match(SPACE);
			setState(53);
			match(TIME);
			setState(54);
			match(NEWLINE);
			setState(55);
			match(CLOSING_DATE_TIME);
			setState(56);
			match(DATE);
			setState(57);
			match(SPACE);
			setState(58);
			match(TIME);
			setState(59);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode HEADER() { return getToken(ExamParser.HEADER, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public TerminalNode TYPE_OF_FEEDBACK() { return getToken(ExamParser.TYPE_OF_FEEDBACK, 0); }
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode TYPE_OF_GRADE() { return getToken(ExamParser.TYPE_OF_GRADE, 0); }
		public TerminalNode DESCRIPTION() { return getToken(ExamParser.DESCRIPTION, 0); }
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(HEADER);
			setState(62);
			match(NEWLINE);
			setState(63);
			match(TYPE_OF_FEEDBACK);
			setState(64);
			type();
			setState(65);
			match(NEWLINE);
			setState(66);
			match(TYPE_OF_GRADE);
			setState(67);
			type();
			setState(68);
			match(NEWLINE);
			setState(69);
			match(DESCRIPTION);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMS || _la==WORD) {
				{
				setState(70);
				phrase();
				}
			}

			setState(73);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SectionContext extends ParserRuleContext {
		public TerminalNode SECTION() { return getToken(ExamParser.SECTION, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public TerminalNode DESCRIPTION() { return getToken(ExamParser.DESCRIPTION, 0); }
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public List<QuestionContext> question() {
			return getRuleContexts(QuestionContext.class);
		}
		public QuestionContext question(int i) {
			return getRuleContext(QuestionContext.class,i);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(SECTION);
			setState(76);
			match(NEWLINE);
			setState(77);
			match(DESCRIPTION);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NUMS || _la==WORD) {
				{
				setState(78);
				phrase();
				}
			}

			setState(81);
			match(NEWLINE);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				question();
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2064384L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionContext extends ParserRuleContext {
		public MatchingContext matching() {
			return getRuleContext(MatchingContext.class,0);
		}
		public MultipleChoiceContext multipleChoice() {
			return getRuleContext(MultipleChoiceContext.class,0);
		}
		public ShortAnswerContext shortAnswer() {
			return getRuleContext(ShortAnswerContext.class,0);
		}
		public NumericalContext numerical() {
			return getRuleContext(NumericalContext.class,0);
		}
		public SelectMissingWordsContext selectMissingWords() {
			return getRuleContext(SelectMissingWordsContext.class,0);
		}
		public TrueFalseContext trueFalse() {
			return getRuleContext(TrueFalseContext.class,0);
		}
		public QuestionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_question; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterQuestion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitQuestion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitQuestion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionContext question() throws RecognitionException {
		QuestionContext _localctx = new QuestionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_question);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MATCHING:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				matching();
				}
				break;
			case MULTIPLE_CHOICE:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				multipleChoice();
				}
				break;
			case SHORT_ANSWER:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				shortAnswer();
				}
				break;
			case NUMERICAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(90);
				numerical();
				}
				break;
			case SELECT_MISSING_WORDS:
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				selectMissingWords();
				}
				break;
			case TRUE_FALSE:
				enterOuterAlt(_localctx, 6);
				{
				setState(92);
				trueFalse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingContext extends ParserRuleContext {
		public TerminalNode MATCHING() { return getToken(ExamParser.MATCHING, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ExamParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ExamParser.NEWLINE, i);
		}
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public TerminalNode SCORE_PER_LINE() { return getToken(ExamParser.SCORE_PER_LINE, 0); }
		public TerminalNode FLOAT() { return getToken(ExamParser.FLOAT, 0); }
		public TerminalNode CORRECT_ANSWER() { return getToken(ExamParser.CORRECT_ANSWER, 0); }
		public List<MatchingOptionCorrectionContext> matchingOptionCorrection() {
			return getRuleContexts(MatchingOptionCorrectionContext.class);
		}
		public MatchingOptionCorrectionContext matchingOptionCorrection(int i) {
			return getRuleContext(MatchingOptionCorrectionContext.class,i);
		}
		public FeedbackContext feedback() {
			return getRuleContext(FeedbackContext.class,0);
		}
		public MatchingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matching; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterMatching(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitMatching(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitMatching(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingContext matching() throws RecognitionException {
		MatchingContext _localctx = new MatchingContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_matching);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(MATCHING);
			setState(96);
			match(NEWLINE);
			setState(97);
			phrase();
			setState(98);
			match(NEWLINE);
			setState(99);
			pair();
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				pair();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMERICAL_OPTION );
			setState(105);
			match(SCORE_PER_LINE);
			setState(106);
			match(FLOAT);
			setState(107);
			match(NEWLINE);
			setState(108);
			match(CORRECT_ANSWER);
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109);
				matchingOptionCorrection();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NUMERICAL_OPTION );
			setState(114);
			match(NEWLINE);
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FEEDBACK) {
				{
				setState(115);
				feedback();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PairContext extends ParserRuleContext {
		public TerminalNode NUMERICAL_OPTION() { return getToken(ExamParser.NUMERICAL_OPTION, 0); }
		public List<PhraseContext> phrase() {
			return getRuleContexts(PhraseContext.class);
		}
		public PhraseContext phrase(int i) {
			return getRuleContext(PhraseContext.class,i);
		}
		public TerminalNode DIVISIVE() { return getToken(ExamParser.DIVISIVE, 0); }
		public TerminalNode ALPHABETICAL_OPTION() { return getToken(ExamParser.ALPHABETICAL_OPTION, 0); }
		public TerminalNode NEWLINE() { return getToken(ExamParser.NEWLINE, 0); }
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(NUMERICAL_OPTION);
			setState(119);
			phrase();
			setState(120);
			match(DIVISIVE);
			setState(121);
			match(ALPHABETICAL_OPTION);
			setState(122);
			phrase();
			setState(123);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MatchingOptionCorrectionContext extends ParserRuleContext {
		public TerminalNode NUMERICAL_OPTION() { return getToken(ExamParser.NUMERICAL_OPTION, 0); }
		public TerminalNode DASH() { return getToken(ExamParser.DASH, 0); }
		public TerminalNode ALPHABETICAL_OPTION() { return getToken(ExamParser.ALPHABETICAL_OPTION, 0); }
		public MatchingOptionCorrectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchingOptionCorrection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).enterMatchingOptionCorrection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExamListener ) ((ExamListener)listener).exitMatchingOptionCorrection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExamVisitor ) return ((ExamVisitor<? extends T>)visitor).visitMatchingOptionCorrection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MatchingOptionCorrectionContext matchingOptionCorrection() throws RecognitionException {
		MatchingOptionCorrectionContext _localctx = new MatchingOptionCorrectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_matchingOptionCorrection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(NUMERICAL_OPTION);
			setState(126);
			match(DASH);
			setState(127);
			match(ALPHABETICAL_OPTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
